assets/_details: correct sudo selector to rm default arrow on safari, moderation_detail: update font sizes fixes #4721

--- a/meinberlin/assets/scss/components/_details.scss
+++ b/meinberlin/assets/scss/components/_details.scss
@@ -3,7 +3,7 @@ details summary {
 }
 
 // Hides the default arrow on safari
-details summary:-webkit-details-marker {
+details summary::-webkit-details-marker {
     display: none;
 }
 
